Release notes for SIP Express Router (ser)
***********************************************

$Id: NEWS,v 1.69 2007/08/27 23:05:59 andrei Exp $



2.1.0 changes

modules:
 - blst      - new module containing script blacklist manipulations functions
               (the source of a message can be blacklisted, removed from the
                blacklist or checked for presence in the blacklist).
 - tm        - support for adding a 503 reply source to the blacklist for
               the time specified in the Retry-After header (see the new tm
               parameters blst_503, blst_503_def_timeout, blst_503_min_timeout
               and blst_503_max_timeout).
             - different error replies for too many branches (500 but with
               different text), resolve error (478) or send error
               (477).
             - tm can be configured not to automatically send 100 replies
               for invites either globally (see the auto_inv_100 parameter)
               or on a per transaction basis (see t_set_auto_inv_100(...))
             - t_relay* error reply are delayed till the end of the script
               to allow the script writer to overwrite them
             - branches are always canceled hop by hop
             - cancels for silently canceled branches (no replies ever 
               received) are automatically generated if later a provisional
               reply arrives on such a branch
             - noisy_ctimer is now 1 (on) by default
             - added maximum transaction lifetime - a transaction is not
               allowed to be active longer then this interval. See
               t_set_max_lifetime(), max_inv_lifetime and max_noninv_lifetime.
             - support for changing the retransmission intervals on the fly,
               on a per transaction basis (it is enabled if tm is compiled
               with -DTM_DIFF_RT_TIMEOUT -- default): t_set_retr(t1, t2).