@@ -1,7 +1,7 @@
 Release notes for SIP Express Router (ser)
 ***********************************************
 
-$Id: NEWS,v 1.69 2007/08/27 23:05:59 andrei Exp $
+$Id: NEWS,v 1.70 2007/10/12 22:25:40 mma Exp $
 
 
 
@@ -103,6 +103,8 @@ core:
              - devel: new PROC_INIT rank, init_child(PROC_INIT) called first
              - futex support on linux (better behaviour when waiting on 
                long held locks, almost no performance impact otherwise)
+             - when dns search list was used for resolution, store the "link"
+               between the short name and long name in cache as CNAME record
 
 new config variables:
   pmtu_discovery = 0 | 1 (default 0) - set DF bit in outbound IP if enabled
@@ -117,6 +119,9 @@ new config variables:
     dns_udp_pref=1). To completely ignore NAPTR records for a specific 
     protocol, set the corresponding protocol preference to -1 (or any other 
     negative number).  (see doc/dns.txt for more info)
+  dns_search_full_match = yes | no (default yes) - when name was resolved using
+    dns search list, check the domain added in the answer matches with one from
+    the search list (small performance hit, but more safe)
   mlock_pages = yes |no (default no) - locks all ser pages into memory making 
     it unswappable (in general one doesn't want his sip proxy swapped out :-))
   shm_force_alloc = yes | no (default no) - tries to pre-fault all the 
